--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <title>Ticket Booking</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    .jumbotron-fluid{
+      height: 700px;
+    }
+    </style>
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/carousel/">
+</head>
 </head>
 <body>
   <app-root></app-root>
