--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       height: 700px;
     }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/carousel/">
 </head>
 </head>
